# MOLLER-IntElec-ProtoSoft

./: .emacs.desktop  CMMonitorSettings.txt  CMakeLists.txt  README.md
Firmware/: boot.scr  moller_ctrl.py  moller_dump  moller_dump.py  moller_viewer.py
PythonSoft/: LICENSE  Makefile  README.md  REG_MOLLER.md  pyproject.toml
PythonSoft/docs/sphinx/: requirements.txt
PythonSoft/docs/sphinx/source/: conf.py  index.rst  modules.rst  moller.rst  readme.md
PythonSoft/moller/: __discovery.py  __init__.py  __main__.py  ctrl.py  moller_regs.json  util.py
PythonSoft/scripts/filter_test/: filter_test.py  scope.py  scope_gui.py  signal_generator.py  signal_generator_agilent_33250a.py  signal_generator_srs_ds360.py
PythonSoft/scripts/old/: moller_ctrl.py  moller_dump.py  moller_viewer_phase.py
PythonSoft/scripts/old/zmq_c/: CMakeLists.txt  main.c
include/: #CMMonitor.h#  CMData.h  CMDataDictLinkDef.h  CMMonitor.h  CMMonitor.h~  CMMonitorDef.h  CMMonitorDictLinkDef.h  CMMonitor_old.h
lib/: CMakeLists.txt  CMakeLists.txt~
lib/include/: RComboBoxDialog.h  RComboBoxDialog.h~  RDataContainer.h  RDataContainer.h~  RDataContainerDef.h  RDataDictClasses.h  RDataDictClasses.h~  RDataFit.h  RDataFit.h~  RDataFitDef.h  RDataFitEntry.h  RDataFitEntry.h~  RDataFitEntryDef.h  RDataWindow.h  RDataWindow.h~  RDataWindowDef.h  RMsgBox.h  RMsgBox.h~  RNumberEntryDialog.h  RNumberEntryDialog.h~  RPlotContainer.h  RPlotContainer.h~  RPlotContainerDef.h  RPlotList.h  RPlotListDef.h  RProcessLog.h  RProcessLog.h~  RProcessLogDef.h  RProgressDialog.h  RProgressDialog.h~  RProgressDialogDef.h  RSDataWindow.h  RSDataWindow.h~  RStringEntryDialog.h  RStringEntryDialog.h~  RVegas.h  RVegas.h~  RVegasDef.h  babypath.h  definers.h  (+2 more)
lib/source/: RComboBoxDialog.cxx  RDataContainer.cxx  RDataFit.cxx  RDataFitEntry.cxx  RDataWindow.cxx  RDataWindow.cxx~  RMsgBox.cxx  RNumberEntryDialog.cxx  RNumberEntryDialog.cxx~  RPlotContainer.cxx  RPlotContainer.cxx~  RPlotList.cxx  RProcessLog.cxx  RProgressDialog.cxx  RSDataWindow.cxx  RStringEntryDialog.cxx  RStringEntryDialog.cxx~  RVegas.cxx  RVegas.cxx~  double_ran2.c  double_rebin.c  double_vegas.c  nrutil.C
source/: CMData.cxx  CMMonitor.cxx  CMMonitor.cxx~
xml/: selection.xml
